--- a/styles/light.css
+++ b/styles/light.css
@@ -94,6 +94,10 @@ select {
   background: hsl(var(--hueMain), 100%, 100%);
 }
 
+pointer {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
 message {
   text-shadow: none;
 }
