--- a/styles/main.css
+++ b/styles/main.css
@@ -958,11 +958,13 @@ button.small.strong.disabled {
 
 notification button.inline,
 notification button.small {
-  backdrop-filter: blur(3px);
-  box-shadow: inset 0px 1px 10px rgba(255, 255, 255, .15);
-  border: 1px solid hsl(var(--appForegroundHSL), .15);
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, .035), rgba(255, 255, 255, .035) 40%, rgba(255, 255, 255, 0) 40%), linear-gradient(180deg, rgba(255, 255, 255, .035), rgba(255, 255, 255, 0));
-  background-color: hsla(var(--appBackgroundDarkHSL), 0.13);
+  backdrop-filter: blur(4px);
+  /* box-shadow: inset 0px 1px 10px rgba(255, 255, 255, .15); */
+  /* border: 1px solid hsl(var(--appForegroundHSL), .15); */
+  border: 1px solid hsla(var(--appBackgroundHSL), 1);
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, .015), rgba(255, 255, 255, .015) 40%, rgba(255, 255, 255, 0) 40%), linear-gradient(180deg, rgba(255, 255, 255, .015), rgba(255, 255, 255, 0));
+  background-color: hsla(var(--appBackgroundDarkHSL), 0.5);
+  /* background-color: hsla(var(--appBackgroundDarkHSL), 0.13); */
   width: 90%;
 }
 
